--- a/tools/utilities/css/basic-style.css
+++ b/tools/utilities/css/basic-style.css
@@ -4,10 +4,20 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 600px;
     min-height: 100vh;
 }
 
-div, p, span, label,input,button {
+h1 {
+    font-size: 1.67rem;
+}
+
+h2 {
+    font-size: 1.333rem;
+    color: rgba(0, 0, 0, 0.7)
+}
+
+div, p, span, label, input, button {
     box-sizing: border-box;
 }
 
@@ -32,9 +42,12 @@ label {
     display: block;
     padding: 10px;
     width: 100%;
+    border-radius: 10px;
+    border: none;
+    border: solid 1px rgba(0, 0, 0, 0.2);
 }
 
-#ivx button {
+button {
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
     box-shadow: none;
@@ -43,6 +56,7 @@ label {
     margin: 10px 0px;
     border-radius: 5px;
     font-size: 1.1rem;
+    transition: 0.3s;
 }
 
 .error-message {
@@ -50,4 +64,28 @@ label {
     box-sizing: border-box;
     display: block;
     padding: 10px 0px;
+}
+
+a {
+    text-decoration: none;
+}
+
+button, .btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    margin: 5px 0px;
+    cursor: pointer;
+    width: auto;
+    border-radius: 5px;
+    font-size: 1.1rem;
+    transition: 0.3s;
+}
+
+button:hover, .btn:hover {
+    background-color: rgba(0, 0, 0, 0.8);
 }
