--- a/tools/less/index.less
+++ b/tools/less/index.less
@@ -1,11 +1,12 @@
 @import 'grid';
 
 .show{
-    display:inherit;
+    visibility:show;
+    pointer-events:auto;
 }
-
 .hide{
-    display:none;
+    visibility:hidden;
+    pointer-events:none;
 }
 
 .youtube-player-container {
